Bug 415257 - "Editable trees: input sized wrongly and rows jumping with flexible and non-flexible treecols" [p=paul.rouget@gmail.com (Paul Rouget) r+sr=Neil a1.9=beltzner]